# Files_processing_point_cloud

./: PointCloud2TIN_txt2off.ipynb  PointCloud2TIN_txt2off.py  PointCloud2Tin_txt2off.py  TIN2VTK.ipynb  TIN2VTK.py  VTK_plot.py
LAS2txt/: Readme.md
LAZ2XYZ/: README.md  laz2xyz.sh
TIN2VTK/: README.md  TIN2VTK_04142025.py
TS2VTU/: introduction_to_VTU_data.md
TXT2TIN/: PointCloud2TIN_txt2off.py  README.md  Readme.md
TXT2TIN_BigData/: README.md
TXT2TIN_BigData/CGAL_Delaunay_Triangulator/CGAL_Delaunay_Triangulator/sources/: CMakeLists.txt  dtri  io.cpp
point_cloud_processing_seaice_surface/: Read_ALS_nc_09192025.py  Read_ALS_txt_from_Kyle_projection_subtraction_mean_sea_drift_correction_02092026.py  Read_downsample_ALS_xyz_09222025.py  Step0_CloudCompare_crop_point_cloud.md  Step0_point_cloud_txt_2_raster_QGIS.md  Step4_make_PySpark_seaice_more_robust.md  convert_off2gpkg.py  netCDF2xyz.md  step0_generate_shape_file_gpkg_or_extent_from_point_clouds  step0_generate_shape_file_gpkg_or_extent_from_point_clouds.md  step3_convert_off2gpkg.md  triangulate_cgal_gsapp13.md
ridges_comparison/: ALS_ICESat-2_complete_processing.md  README.md  Read_ICESat-2_projection_drift_correct.ipynb  Step0_Read_ALS_txt_from_Kyle_12162025.py  Step1_sift_corrected.ipynb  Step2_Read_ICESat-2_projection_drift_correct.py  Step_prepare0_segment_ALS_partition.md  comparison_ridge_peaks_02032026.py  comparison_spatial_idx_01282026.py  sift_corrected.ipynb
